test/should-fail/vsgc942.f3
/**
  * "Compiler should emit warning when source instantiates a thread
  * or calls Thread.start().
  * @test/warning
  */
import java.lang.Thread;
var th : Thread = new Thread();
th.start();
th = Thread{};
